<resources>
    <string name="app_name">SIPManager</string>
    <string name="app_name_readable">SIP Manager</string>
    <string name="sip_manager">SIP Manager</string>
    <string name="password">Password</string>
    <string name="unlock_database">Unlock DataBase</string>
    <string name="biometric_button_login">Biometric Button Login</string>
    <string name="register_biometrics">Register \n Biometrics</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register_password_description">Set your password</string>
    <string name="recover_question">Recover Question</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="set_credentials">Set credentials</string>
    <string name="forgot_password">Forgot \n password?</string>
    <string name="enable_biometric_login">Enable biometric login</string>
    <string name="incorrect_password">Incorrect password</string>
</resources>