<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="loginViewModel"
            type="com.github.ricardopolit.sipmanager.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.login.LoginFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sip_manager"
            android:textAlignment="center"
            android:textColor="@color/Blue_munsell"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/max_padding"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/Rich_black"
            android:textSize="18sp"
            android:text="@={loginViewModel.password}"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/max_padding"
            android:enabled="false"
            android:text="@string/unlock_database"
            android:textColor="@color/Blue_munsell"
            android:textSize="18sp"
            android:onClick="@{() -> loginViewModel.onLoginClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBiometricLoging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/max_padding"
            android:contentDescription="@string/biometric_button_login"
            android:visibility="@{loginViewModel.buttonLoginBiometricVisibility ? View.VISIBLE: View.GONE}"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:iconPadding="0dp"
            app:iconTint="@color/Blue_munsell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBiometricRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/max_padding"
            android:text="@string/register_biometrics"
            android:textColor="@color/Blue_munsell"
            android:textSize="14sp"
            android:visibility="@{loginViewModel.buttonRegisterBiometricVisibility ? View.VISIBLE : View.GONE}"
            app:backgroundTint="?android:attr/textColorPrimary"
            app:iconPadding="0dp"
            app:iconTint="@color/Blue_munsell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonRecoverPassword"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRecoverPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/max_padding"
            android:text="@string/forgot_password"
            android:textColor="@color/Blue_munsell"
            android:textSize="14sp"
            app:backgroundTint="?android:attr/textColorPrimary"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonBiometricRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>